Icon alignment fixed

--- a/cet-landing/src/Components/LandingPage/LandingPageCard/Landing.css
+++ b/cet-landing/src/Components/LandingPage/LandingPageCard/Landing.css
@@ -33,9 +33,7 @@
 }
 
 .icon {
-  position: absolute;
-  left: 50px;
-  top: 38px;
+  position: relative;
   /* width: 100%; */
   height: 55%;
 }
